fix mojave bar overlap

--- a/theme/mojave.less
+++ b/theme/mojave.less
@@ -75,7 +75,7 @@
             bottom         : var(--dist, 0);
             width          : auto;
             position       : fixed;
-            z-index        : 15;
+            z-index        : 35;
             backdrop-filter: var(--glassFilterHeavy);
             transition     : margin-left 0.35s var(--appleEase);
 
